fixed collapsed navbar

--- a/src/components/Navbar/_navbar.scss
+++ b/src/components/Navbar/_navbar.scss
@@ -3,18 +3,21 @@
     min-height: 70px;
     margin-bottom: 0px;
     .navbar-nav {
-        a {
-            line-height: 70px;
-            padding-top: 0px;
-            padding-bottom: 0px;
+        @media (min-width: 768px) {
+            a {
+                line-height: 70px;
+                padding-top: 0px;
+                padding-bottom: 0px;
+            }
         }
-        /* style the dropdown menu, detach from navbar */
-        .dropdown-menu {
-            margin-top: 15px;
-            border-radius: 4px; /* round menu */
-
-            > li > a {
+        @media (min-width: 768px) {
+            .dropdown-menu > li > a {
                 line-height: 45px;
+            }
+
+            .dropdown-menu { /* detach from navbar */
+                margin-top: 15px;
+                border-radius: 4px; /* round menu */
             }
         }
 
